--- a/free-seo-guides/ultimate-guide-seo-website-redesign.html
+++ b/free-seo-guides/ultimate-guide-seo-website-redesign.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="../assets/js/jquery.js?1.0.1597"></script>
+<script type="text/javascript" src="../assets/js/jquery.js?1.0.1599"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="../assets/css/bootstrap.css?1.0.1597" media="screen" />
-<script type="text/javascript" src="../assets/js/bootstrap.min.js?1.0.1597"></script>
+<link rel="stylesheet" href="../assets/css/bootstrap.css?1.0.1599" media="screen" />
+<script type="text/javascript" src="../assets/js/bootstrap.min.js?1.0.1599"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="../assets/css/layout.ie.css?1.0.1597">
-<script src="../assets/js/layout.ie.js?1.0.1597"></script>
+<link rel="stylesheet" href="../assets/css/layout.ie.css?1.0.1599">
+<script src="../assets/js/layout.ie.js?1.0.1599"></script>
 <![endif]-->
 <link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="../assets/js/layout.core.js"></script>
-<script src="../assets/js/CloudZoom.js?1.0.1597"></script>
+<script src="../assets/js/CloudZoom.js?1.0.1599"></script>
 	
     <title>The Ulitimate Guide to SEO for Website Re-designs | Smart Sprout</title>
-	<link rel="stylesheet" href="../assets/css/style.css?1.0.1597">
-	<script src="../assets/js/script.js?1.0.1597"></script>
+	<link rel="stylesheet" href="../assets/css/style.css?1.0.1599">
+	<script src="../assets/js/script.js?1.0.1599"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -530,7 +530,7 @@ to retain search engine rankings when re-designing a website
 </p>
 </div>
 	
-		<div class="bd-containereffect-256 container-effect container "><div class=" bd-layoutbox-60  bd-no-margins clearfix">
+		<div class="bd-containereffect-256 container-effect container "><div class=" bd-layoutbox-60 hidden-xs  bd-no-margins clearfix">
     <div class="bd-container-inner">
         <h6 class=" bd-textblock-397 bd-content-element">
     Want help choosing a domain?
@@ -691,7 +691,7 @@ to retain search engine rankings when re-designing a website
 </p>
 </div>
 	
-		<div class="bd-containereffect-272 container-effect container "><div class=" bd-layoutbox-83  bd-no-margins clearfix">
+		<div class="bd-containereffect-272 container-effect container "><div class=" bd-layoutbox-83 hidden-xs  bd-no-margins clearfix">
     <div class="bd-container-inner">
         <h6 class=" bd-textblock-440 bd-content-element">
     Confused over H1s and robots?
@@ -870,7 +870,7 @@ to retain search engine rankings when re-designing a website
 </p>
 </div>
 	
-		<div class="bd-containereffect-268 container-effect container "><div class=" bd-layoutbox-81  bd-no-margins clearfix">
+		<div class="bd-containereffect-268 container-effect container "><div class=" bd-layoutbox-81 hidden-xs  bd-no-margins clearfix">
     <div class="bd-container-inner">
         <h6 class=" bd-textblock-432 bd-content-element">
     Need some help?
@@ -1029,7 +1029,7 @@ to retain search engine rankings when re-designing a website
 </p>
 </div>
 	
-		<div class="bd-containereffect-264 container-effect container "><div class=" bd-layoutbox-79  bd-no-margins clearfix">
+		<div class="bd-containereffect-264 container-effect container "><div class=" bd-layoutbox-79 hidden-xs  bd-no-margins clearfix">
     <div class="bd-container-inner">
         <h6 class=" bd-textblock-424 bd-content-element">
     FTP and .htaccess files got you worried?
@@ -1217,7 +1217,7 @@ to retain search engine rankings when re-designing a website
 </p>
 </div>
 	
-		<div class="bd-containereffect-261 container-effect container "><div class=" bd-layoutbox-77  bd-no-margins clearfix">
+		<div class="bd-containereffect-261 container-effect container "><div class=" bd-layoutbox-77 hidden-xs  bd-no-margins clearfix">
     <div class="bd-container-inner">
         <h6 class=" bd-textblock-410 bd-content-element">
     To infinity and beyond!
@@ -1232,7 +1232,7 @@ to retain search engine rankings when re-designing a website
 </h4>
 	
 		<p class=" bd-textblock-408 bd-content-element">
-    (There's no obligation and most say I'm a nice guy!)
+    (There's no obligation and most people I like say I'm a nice guy!)
 </p>
     </div>
 </div>
