Added chat facility

--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1599"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1601"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1599" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1599"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1601" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1601"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1599">
-<script src="./assets/js/layout.ie.js?1.0.1599"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1601">
+<script src="./assets/js/layout.ie.js?1.0.1601"></script>
 <![endif]-->
 <link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1599"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1601"></script>
 	
     <title>Affordable Digital Marketing Support | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1599">
-	<script src="./assets/js/script.js?1.0.1599"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1601">
+	<script src="./assets/js/script.js?1.0.1601"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -40,6 +40,31 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- Free Consultation Button -->
 <a href="https://smartsprout.co.uk/free-consultation"> <div class="side-button" id="free-consultation"></div> </a>
 <!-- End Free Consultation Button -->
+
+<!-- Start of Async Drift Code -->
+<script>
+!function() {
+  var t;
+  if (t = window.driftt = window.drift = window.driftt || [], !t.init) return t.invoked ? void (window.console && console.error && console.error("Drift snippet included twice.")) : (t.invoked = !0, 
+  t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
+  t.factory = function(e) {
+    return function() {
+      var n;
+      return n = Array.prototype.slice.call(arguments), n.unshift(e), t.push(n), t;
+    };
+  }, t.methods.forEach(function(e) {
+    t[e] = t.factory(e);
+  }), t.load = function(t) {
+    var e, n, o, i;
+    e = 3e5, i = Math.ceil(new Date() / e) * e, o = document.createElement("script"), 
+    o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + i + "/" + t + ".js", 
+    n = document.getElementsByTagName("script")[0], n.parentNode.insertBefore(o, n);
+  });
+}();
+drift.SNIPPET_VERSION = '0.3.1';
+drift.load('w7hzmpv3acdg');
+</script>
+<!-- End of Async Drift Code -->
     
  <meta name="keywords" content="HTML, CSS, JavaScript">
 
@@ -412,7 +437,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </h2>
 	
 		<p class=" bd-textblock-91 bd-content-element">
-    Until now, digital marketing support has only been accessible to those with money to burn. However, that era has thankfully come to an end. Smart Sprout is dedicated to making digital marketing services more accessible and will work along side you to push your website to the top of the search listings, engage your market, build your mailing list, improve your sales conversions and more.&nbsp;<br><br>Whatever your business needs, whether it's <b>search engine optimisation</b> (SEO), a high converting <b>pay per click</b> (PPC) campaign, or even help sourcing a trusted website developer or graphic designer, you have come to the right place!
+    Until now, digital marketing support has only been accessible to those with money to burn. However, that era has thankfully come to an end. Smart Sprout is dedicated to making digital marketing services more accessible and will work along side you to push your website to the top of the search listings, engage your market, build your mailing list, improve your sales conversions and more.&nbsp;<br><br>Whatever your business needs, whether it's search engine optimisation (SEO), a high converting pay per click (PPC) campaign, or even help sourcing a trusted website developer or graphic designer, you have come to the right place!
 </p>
 	
 		<h2 class=" bd-textblock-89 bd-content-element">
@@ -420,7 +445,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </h2>
 	
 		<p class=" bd-textblock-88 bd-content-element">
-    Smart Sprout is a one-man <b>digital marketing agency</b> that provides seamless, digital marketing services and effective results at a low price-tag. In addition to affordable digital marketing support, <b>Smart Sprout delivers, agency-like, managed services</b> such as copy-writing, PR, graphic design and website development through trusted, reliable third parties. Because these services are provided externally, there are no salaries to pay. Therefore, the client only pays for what they get.<br><br>Clients are also encouraged to learn simple, effective digital marketing methods through <b>weekly&nbsp;mentoring/coaching sessions</b>. This helps to improve online processes moving forward, reduce overall costs and enhance results. If you have any questions, or you would just like a chat please <b><a href="https://smartsprout.co.uk/contact.html" draggable="false">get in touch</a></b>.
+    Smart Sprout is a one-man digital marketing agency that provides seamless, digital marketing services and effective results at a low price-tag. In addition to affordable digital marketing support, Smart Sprout delivers, agency-like, managed services such as copy-writing, PR, graphic design and website development through trusted, reliable third parties. Because these services are provided externally, there are no salaries to pay. Therefore, the client only pays for what they get.<br><br>Clients are also encouraged to learn simple, effective digital marketing methods through weekly&nbsp;mentoring/coaching sessions. This helps to improve online processes moving forward, reduce overall costs and enhance results. If you have any questions, or you would just like a chat please <b><a href="https://smartsprout.co.uk/contact.html" draggable="false">get in touch</a></b>.
 </p>
 	
 		<div class=" bd-spacer-24 clearfix"></div>
