--- a/free-seo-guides/ultimate-seo-checklist-website-redesigns.html
+++ b/free-seo-guides/ultimate-seo-checklist-website-redesigns.html
@@ -16,11 +16,11 @@
 <link rel="stylesheet" href="../assets/css/layout.ie.css?1.0.1635">
 <script src="../assets/js/layout.ie.js?1.0.1635"></script>
 <![endif]-->
-<link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
+<link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="../assets/js/layout.core.js"></script>
 <script src="../assets/js/CloudZoom.js?1.0.1635"></script>
 	
-    <title>The Ultimate SEO Checklist for Website Redesigns - Smart Sprout</title>
+    <title>The Ultimate SEO Checklist for Website Redesigns | Smart Sprout</title>
 	<link rel="stylesheet" href="../assets/css/style.css?1.0.1635">
 	<script src="../assets/js/script.js?1.0.1635"></script>
     <meta charset="utf-8">
@@ -537,7 +537,7 @@ to retain search engine rankings when redesigning a website
 </h6>
 	
 		<h4 class=" bd-textblock-399 bd-content-element">
-    It's important your domain doesn't have a history of spam or malware.<br>If you are unsure, <a target="_blank" href="http://smartsprout.co.uk/contact"><b>get in touch</b></a> and I will check it for you for free.
+    It's important your domain doesn't have a history of spam or malware.<br>If you are unsure, <a target="_blank" href="//smartsprout.co.uk/contact"><b>get in touch</b></a> and I will check it for you for free.
 </h4>
 	
 		<p class=" bd-textblock-401 bd-content-element">
@@ -702,7 +702,7 @@ to retain search engine rankings when redesigning a website
 </h4>
 	
 		<h4 class=" bd-textblock-438 bd-content-element">
-    <b>Interested?&nbsp;<a target="_blank" href="http://smartsprout.co.uk/contact">Get in touch</a></b>&nbsp;for a free chat.
+    <b>Interested?&nbsp;<a target="_blank" href="//smartsprout.co.uk/contact">Get in touch</a></b>&nbsp;for a free chat.
 </h4>
 	
 		<p class=" bd-textblock-437 bd-content-element">
@@ -726,13 +726,13 @@ to retain search engine rankings when redesigning a website
 	
 		<div class="bd-containereffect-118 container-effect container ">
 <p class=" bd-textblock-298  bd-content-element">
-    http://smartsprout.co.uk
+    //smartsprout.co.uk
 <br><b>https://smartsprout.co.uk
-</b><br>http://www.smartsprout.co.uk
+</b><br>//www.smartsprout.co.uk
 <br><b>https://www.smartsprout.co.uk
-</b><br>http://smartsprout.co.uk/index.html
+</b><br>//smartsprout.co.uk/index.html
 <br>https://smartsprout.co.uk/index.html
-<br>http://www.smartsprout.co.uk/index.html
+<br>//www.smartsprout.co.uk/index.html
 <br>https://www.smartsprout.co.uk/index.html<br><br><!--EndFragment-->
 </p>
 </div>
@@ -881,7 +881,7 @@ to retain search engine rankings when redesigning a website
 </h4>
 	
 		<h4 class=" bd-textblock-430 bd-content-element">
-    <b>Interested?&nbsp;<a target="_blank" href="http://smartsprout.co.uk/contact">Get in touch</a></b>&nbsp;for a free chat.
+    <b>Interested?&nbsp;<a target="_blank" href="//smartsprout.co.uk/contact">Get in touch</a></b>&nbsp;for a free chat.
 </h4>
 	
 		<p class=" bd-textblock-429 bd-content-element">
@@ -911,7 +911,7 @@ to retain search engine rankings when redesigning a website
 	
 		<div class="bd-containereffect-169 container-effect container ">
 <p class=" bd-textblock-331  bd-content-element">
-    1. <a target="_blank" href="http://www.httrack.com/page/2/en/index.html">Download HTTrack</a>
+    1. <a target="_blank" href="//www.httrack.com/page/2/en/index.html">Download HTTrack</a>
 <br>2.	Install HTTrack on your computer
 <br>3.	Run HTTrack
 <br>4.	Click “Next”. Then, name your project
@@ -1019,7 +1019,7 @@ to retain search engine rankings when redesigning a website
 	
 		<div class="bd-containereffect-207 container-effect container ">
 <p class=" bd-textblock-350  bd-content-element">
-    Redirect 301 <b>/oldpage1.html</b> http://www.yoursite.com<b>/newpage1.html</b><br>	Redirect 301 <b>/oldpage2.html </b>http://www.yoursite.com<b>/newpage2.html</b><br>	Redirect 301 <b>/oldpage3.html </b>http://www.yoursite.com<b>/newpage3.html</b><br>
+    Redirect 301 <b>/oldpage1.html</b> //www.yoursite.com<b>/newpage1.html</b><br>	Redirect 301 <b>/oldpage2.html </b>//www.yoursite.com<b>/newpage2.html</b><br>	Redirect 301 <b>/oldpage3.html </b>//www.yoursite.com<b>/newpage3.html</b><br>
 </p>
 </div>
 	
@@ -1040,7 +1040,7 @@ to retain search engine rankings when redesigning a website
 </h4>
 	
 		<h4 class=" bd-textblock-422 bd-content-element">
-    <b>Interested?&nbsp;<a target="_blank" href="http://smartsprout.co.uk/contact">Get in touch</a></b>&nbsp;for a free chat.
+    <b>Interested?&nbsp;<a target="_blank" href="//smartsprout.co.uk/contact">Get in touch</a></b>&nbsp;for a free chat.
 </h4>
 	
 		<p class=" bd-textblock-421 bd-content-element">
@@ -1171,7 +1171,7 @@ to retain search engine rankings when redesigning a website
 	
 		<div class="bd-containereffect-241 container-effect container ">
 <p class=" bd-textblock-377  bd-content-element">
-    http://smartsprout.co.uk&nbsp;<br><b>https://smartsprout.co.uk&nbsp;</b><br>http://www.smartsprout.co.uk&nbsp;<br><b>https://www.smartsprout.co.uk&nbsp;</b><br>http://smartsprout.co.uk/index.html&nbsp;<br>https://smartsprout.co.uk/index.html&nbsp;<br>http://www.smartsprout.co.uk/index.html&nbsp;<br>https://www.smartsprout.co.uk/index.html<br>
+    //smartsprout.co.uk&nbsp;<br><b>https://smartsprout.co.uk&nbsp;</b><br>//www.smartsprout.co.uk&nbsp;<br><b>https://www.smartsprout.co.uk&nbsp;</b><br>//smartsprout.co.uk/index.html&nbsp;<br>https://smartsprout.co.uk/index.html&nbsp;<br>//www.smartsprout.co.uk/index.html&nbsp;<br>https://www.smartsprout.co.uk/index.html<br>
 </p>
 </div>
 	
@@ -1228,7 +1228,7 @@ to retain search engine rankings when redesigning a website
 </h4>
 	
 		<h4 class=" bd-textblock-416 bd-content-element">
-    <b>Interested?&nbsp;<a target="_blank" href="http://smartsprout.co.uk/contact">Get in touch</a></b>&nbsp;for a free chat.
+    <b>Interested?&nbsp;<a target="_blank" href="//smartsprout.co.uk/contact">Get in touch</a></b>&nbsp;for a free chat.
 </h4>
 	
 		<p class=" bd-textblock-408 bd-content-element">
@@ -1343,7 +1343,7 @@ to retain search engine rankings when redesigning a website
     <div class="bd-container-inner bd-content-element">
         <script type="application/ld+json">
 {
-	"@context": "http://schema.org",
+	"@context": "//schema.org",
 	"@type": "LocalBusiness",
 	"name": "Smart Sprout Affordable Digital Marketing",
 	"address": {
@@ -1378,7 +1378,7 @@ to retain search engine rankings when redesigning a website
 		<div class=" bd-pagefooter-2 hidden-md hidden-sm hidden-xs hidden-lg">
     <div class="bd-container-inner">
         
-            <a href='http://www.themler.io/html-templates' target="_blank">HTML Template</a> created with <a href='http://themler.io' target="_blank">Themler</a>.
+            <a href='//www.themler.io/html-templates' target="_blank">HTML Template</a> created with <a href='//themler.io' target="_blank">Themler</a>.
     </div>
 </div>
     </div>
