--- a/vegan.html
+++ b/vegan.html
@@ -16,11 +16,11 @@
 <link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1635">
 <script src="./assets/js/layout.ie.js?1.0.1635"></script>
 <![endif]-->
-<link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
+<link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
 <script src="./assets/js/CloudZoom.js?1.0.1635"></script>
 	
-    <title>Ethical Business Pricing - Smart Sprout</title>
+    <title>Ethical Business Pricing | Smart Sprout</title>
 	<link rel="stylesheet" href="./assets/css/style.css?1.0.1635">
 	<script src="./assets/js/script.js?1.0.1635"></script>
     <meta charset="utf-8">
@@ -599,7 +599,7 @@ and associated costs.
     <div class="bd-container-inner bd-content-element">
         <script type="application/ld+json">
 {
-	"@context": "http://schema.org",
+	"@context": "//schema.org",
 	"@type": "LocalBusiness",
 	"name": "Smart Sprout Affordable Digital Marketing",
 	"address": {
@@ -634,7 +634,7 @@ and associated costs.
 		<div class=" bd-pagefooter-2 hidden-md hidden-sm hidden-xs hidden-lg">
     <div class="bd-container-inner">
         
-            <a href='http://www.themler.io/html-templates' target="_blank">HTML Template</a> created with <a href='http://themler.io' target="_blank">Themler</a>.
+            <a href='//www.themler.io/html-templates' target="_blank">HTML Template</a> created with <a href='//themler.io' target="_blank">Themler</a>.
     </div>
 </div>
     </div>
