--- a/free-seo-guides/ultimate-seo-checklist-website-redesigns.html
+++ b/free-seo-guides/ultimate-seo-checklist-website-redesigns.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="../assets/js/jquery.js?1.0.1636"></script>
+<script type="text/javascript" src="../assets/js/jquery.js?1.0.1638"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="../assets/css/bootstrap.css?1.0.1636" media="screen" />
-<script type="text/javascript" src="../assets/js/bootstrap.min.js?1.0.1636"></script>
+<link rel="stylesheet" href="../assets/css/bootstrap.css?1.0.1638" media="screen" />
+<script type="text/javascript" src="../assets/js/bootstrap.min.js?1.0.1638"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="../assets/css/layout.ie.css?1.0.1636">
-<script src="../assets/js/layout.ie.js?1.0.1636"></script>
+<link rel="stylesheet" href="../assets/css/layout.ie.css?1.0.1638">
+<script src="../assets/js/layout.ie.js?1.0.1638"></script>
 <![endif]-->
 <link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="../assets/js/layout.core.js"></script>
-<script src="../assets/js/CloudZoom.js?1.0.1636"></script>
+<script src="../assets/js/CloudZoom.js?1.0.1638"></script>
 	
     <title>The Ultimate SEO Checklist for Website Redesigns | Smart Sprout</title>
-	<link rel="stylesheet" href="../assets/css/style.css?1.0.1636">
-	<script src="../assets/js/script.js?1.0.1636"></script>
+	<link rel="stylesheet" href="../assets/css/style.css?1.0.1638">
+	<script src="../assets/js/script.js?1.0.1638"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -526,7 +526,7 @@ to retain search engine rankings when redesigning a website
 	
 		<div class="bd-containereffect-57 container-effect container ">
 <p class=" bd-textblock-281  bd-content-element">
-    Assuming the site has been around for some time, the domain will have built a reputation. Depending on how the website has been managed, this could be positive or negative.<br><br>Generally the age of a domain will work in your favour. Search engines don’t easily trust new domains —as trust has to be earned over time. Therefore, sharing them with their users can be risky.<br><br>Old domains however, especially those that have been well maintained, are trustworthy and easy to rank. For this reason, consider staying with the current domain if you can.
+    If the site has been around for some time, the domain will have built a reputation. Depending on how the website has been managed, this could be positive or negative.<br><br>Generally the age of a domain will work in your favour. Search engines don’t easily trust new domains, as trust has to be earned over time. Therefore, sharing them with their users can be risky.<br><br>Old domains however, especially those that have been well maintained, are trustworthy and easy to rank. For this reason, consider staying with the current domain if you can.
 </p>
 </div>
 	
@@ -561,7 +561,7 @@ to retain search engine rankings when redesigning a website
 	
 		<div class="bd-containereffect-67 container-effect container ">
 <p class=" bd-textblock-285  bd-content-element">
-    If you do choose to change the domain, I recommend you get professional advice before you select a new one. Some available domains may not be as new as you think and could have a poor reputation.<br><br>If your chosen domain has been used for malicious or “spammy” purposes, it may be blacklisted or still have penalties. For this reason, a background check should always be done before you commit to a new domain.<br><br>Even if the new domain is legit, there may be an initial drop in traffic if you switch domains.
+    If you do choose to change the domain, I recommend seeking professional advice before you buy. Some available domains may not be as new as you think and could have a poor reputation.<br><br>If your chosen domain has been used for malicious or “spammy” purposes, it may be blacklisted or still have associated penalties. For this reason, a background check should always be carried out before committing to a new domain.<br><br>Even if the new domain is legit, there may be an initial drop in traffic if you switch domains.
 </p>
 </div>
 	
@@ -615,8 +615,8 @@ to retain search engine rankings when redesigning a website
 	
 		<div class="bd-containereffect-86 container-effect container ">
 <p class=" bd-textblock-299  bd-content-element">
-    Before you go ahead with a website redesign, you need to get your ducks in a row. Let’s start by crawling the current site. For this we will use the “<a href="https://www.screamingfrog.co.uk/seo-spider/"><b>Screaming Frog SEO Spider</b></a>”. You can use it for free, but it is restricted. So, I recommend paying for a licence — read ahead before you buy — I am not affiliated with Screaming Frog.
-<br><br>Once you have the full version of Screaming Frog SEO Spider, set it to “Spider” mode, type the current domain in the box and click start (you may need to exclude URL query strings and ignore "robots.txt" in the settings). Make sure you are in the “Internal” tab and select “HTML”. Export your scrape and name it “old-site-keep”. Open it and save a copy as an Excel workbook or equivalent. Rename this file: “old-site-edit” — we will use this later.<br>
+    Before proceeding with a website redesign, it's important to plan ahead. Let’s start by crawling the current site. For this, we will use the “<a href="https://www.screamingfrog.co.uk/seo-spider/"><b>Screaming Frog SEO Spider</b></a>”. You can use the software for free, but many of it's features are restricted. Therefore, I recommend paying for a licence — read ahead before you buy — I am not affiliated with Screaming Frog.
+<br><br>Once you have the full version of Screaming Frog SEO Spider, set the mode to “Spider”, type the current domain in the box and click start (you may need to exclude URL query strings and ignore "robots.txt" in the settings). Make sure you are in the “Internal” tab and select “HTML”. Export your scrape and name it “old-site-keep”. Open it and save a copy as an Excel workbook or equivalent. Rename this file: “old-site-edit” — we will use this later.<br>
 </p>
 </div>
 	
