--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1636"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1638"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1636" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1636"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1638" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1638"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1636">
-<script src="./assets/js/layout.ie.js?1.0.1636"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1638">
+<script src="./assets/js/layout.ie.js?1.0.1638"></script>
 <![endif]-->
 <link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1636"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1638"></script>
 	
     <title>Affordable Digital Marketing Support | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1636">
-	<script src="./assets/js/script.js?1.0.1636"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1638">
+	<script src="./assets/js/script.js?1.0.1638"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -412,7 +412,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </h2>
 	
 		<p class=" bd-textblock-91 bd-content-element">
-    Until now, digital marketing support has only been accessible to those with money to burn. However, that era has thankfully come to an end. Smart Sprout is dedicated to making digital marketing services more accessible and will work along side you to push your website to the top of the search listings, engage your market, build your mailing list, improve your sales conversions and more.&nbsp;<br><br>Whatever your business needs, whether it's search engine optimisation (SEO), a high converting pay per click (PPC) campaign, or even help sourcing a trusted website developer or graphic designer, you have come to the right place!
+    Until now, digital marketing agency support has only been accessible to those with money to burn. However, that era has thankfully come to an end. Smart Sprout is dedicated to making digital marketing services more accessible and will work along side you to push your website to the top of the search listings, engage your market, build your mailing list, improve your sales conversions and more.&nbsp;<br><br>Whatever your business needs, whether it's search engine optimisation (SEO), a high converting pay per click (PPC) campaign, or even help sourcing a trusted website developer or graphic designer, you have come to the right place!
 </p>
 	
 		<h2 class=" bd-textblock-89 bd-content-element">
