New design concept

--- a/free-digital-marketing-tips.html
+++ b/free-digital-marketing-tips.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1642"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1722"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1642" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1642"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1722" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1722"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1642">
-<script src="./assets/js/layout.ie.js?1.0.1642"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1722">
+<script src="./assets/js/layout.ie.js?1.0.1722"></script>
 <![endif]-->
 <link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1642"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1722"></script>
 	
     <title>Free Digital Marketing Tips | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1642">
-	<script src="./assets/js/script.js?1.0.1642"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1722">
+	<script src="./assets/js/script.js?1.0.1722"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -499,7 +499,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div>
 	
 		<footer class=" bd-footerarea-1 bd-margins">
-        <section class=" bd-section-2 bd-page-width bd-tagstyles " id="section4" data-section-title="Four Columns">
+        <div class="bd-containereffect-139 container-effect container "><div class=" bd-layoutbox-38  bd-no-margins clearfix">
+    <div class="bd-container-inner">
+        <img class="bd-imagelink-50 bd-no-margins bd-own-margins bd-imagestyles   "  src="./assets/images/b864baa9489d126d6d984ec5dfd8fa46_SSLogoinverted.png">
+	
+		<div class="bd-separator-20  bd-separator-center bd-separator-content-center clearfix" >
+    <div class="bd-container-inner">
+        <div class="bd-separator-inner">
+            
+        </div>
+    </div>
+</div>
+    </div>
+</div>
+</div>
+	
+		<section class=" bd-section-2 bd-page-width bd-tagstyles " id="section4" data-section-title="Four Columns">
     <div class="bd-container-inner bd-margins clearfix">
         <div class=" bd-layoutcontainer-6 bd-columns bd-no-margins">
     <div class="bd-container-inner">
@@ -522,7 +537,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <a href="mailto:info@smartsprout.co.uk">info@smartsprout.co.uk</a>
 </p>
 	
-		<span class="bd-iconlink-6 bd-no-margins bd-own-margins bd-icon-36 bd-icon "></span>
+		<span class="bd-iconlink-6 bd-own-margins bd-icon-36 bd-icon "></span>
 	
 		<div class=" bd-spacer-26 clearfix"></div>
 	
@@ -548,7 +563,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	
 		<div class=" bd-customhtml-7 bd-tagstyles">
     <div class="bd-container-inner bd-content-element">
-        <p class="footer-links"><a href="https://smartsprout.co.uk/digital-marketing-services/affordable-search-engine-optimisation">Low-cost SEO</a><a href="./" draggable="false"><br></a></p><p class="footer-links"><a href="https://smartsprout.co.uk/pricing">Smart Sprout Pricing</a></p><p class="footer-links"><span style="background-color: rgb(133, 133, 133);"><a href="https://smartsprout.co.uk/contact">Contact&nbsp;Smart Sprout</a></span></p><p class="footer-links"><br></p>
+        <p class="footer-links"><a href="https://smartsprout.co.uk/digital-marketing-services/affordable-search-engine-optimisation" draggable="false">Low-cost SEO</a><a href="./" draggable="false"><br></a></p><p class="footer-links"><a href="https://smartsprout.co.uk/pricing" draggable="false">Smart Sprout Pricing</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/contact" draggable="false">Contact&nbsp;Smart Sprout</a></p><p class="footer-links"><br></p>
     </div>
 </div></div></div>
 </div>
@@ -566,7 +581,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	
 		<div class=" bd-customhtml-2 bd-tagstyles">
     <div class="bd-container-inner bd-content-element">
-        <p class="footer-links"><span style="background-color: rgb(133, 133, 133);"><a href="https://smartsprout.co.uk/duplicate-content">What is Duplicate Content?</a></span><br></p><p class="footer-links"><a href="https://smartsprout.co.uk/404s-dead-links-missing-pages" draggable="false">404s, Dead Links and Missing Pages</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/redirect-chains-redirect-loops">301 Redirects and Redirect Errors</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/canonical-urls-canonical-tags">Canonical URLs and Canonical Tags</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/free-seo-guides/ultimate-seo-checklist-website-redesigns">SEO Checklist for Website Redesigns</a></p><p class="footer-links"><br></p>
+        <p class="footer-links"><a href="https://smartsprout.co.uk/duplicate-content" draggable="false">What is Duplicate Content?</a><br></p><p class="footer-links"><a href="https://smartsprout.co.uk/404s-dead-links-missing-pages" draggable="false">404s, Dead Links and Missing Pages</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/redirect-chains-redirect-loops" draggable="false">301 Redirects and Redirect Errors</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/canonical-urls-canonical-tags" draggable="false">Canonical URLs and Canonical Tags</a></p><p class="footer-links"><a href="https://smartsprout.co.uk/free-seo-guides/ultimate-seo-checklist-website-redesigns" draggable="false">SEO Checklist for Website Redesigns</a></p><p class="footer-links"><br></p>
     </div>
 </div></div></div>
 </div>
@@ -646,4 +661,4 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </a></div>
 </body>
 </html>
-<!-- 0.3071795520535596 -->
+<!-- 0.4792553442933827 -->
