--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1737"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1747"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1737" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1737"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1747" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1747"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1737">
-<script src="./assets/js/layout.ie.js?1.0.1737"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1747">
+<script src="./assets/js/layout.ie.js?1.0.1747"></script>
 <![endif]-->
-<link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
+<link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic|Archivo+Black:regular&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1737"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1747"></script>
 	
     <title>Affordable Digital Marketing Support | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1737">
-	<script src="./assets/js/script.js?1.0.1737"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1747">
+	<script src="./assets/js/script.js?1.0.1747"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -49,6 +49,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     
  <style>a {
   transition: color 250ms linear;
+  color: #fff;
+}
+
+a:hover {
+  transition: color 250ms linear;
+  color: #c266ff;
 }
 
 /* - - - - - page format - - - - - */
@@ -359,7 +365,7 @@ p {
 		<div class=" bd-columnwrapper-177 
  col-sm-6">
     <div class="bd-layoutcolumn-177 bd-column" ><div class="bd-vertical-align-wrapper"><h6 class=" bd-textblock-454 bd-content-element">
-    Get Your<br>Free Website<br>Health check
+    Get Your<br>Free <a href="https://smartsprout.co.uk/free-website-health-check">Website<br>Health check</a>
 </h6>
 	
 		<p class=" bd-textblock-453 bd-content-element">
@@ -368,7 +374,7 @@ p {
 	
 		<a 
  name="Free Website Health Check"
- href="https://smartsprout.co.uk/free-website-report" class="bd-linkbutton-62  bd-button-102  bd-own-margins bd-content-element"    >
+ href="https://smartsprout.co.uk/free-website-health-check" class="bd-linkbutton-62  bd-button-102  bd-own-margins bd-content-element"    >
     &gt;&gt;
 </a></div></div>
 </div>
@@ -434,6 +440,14 @@ p {
     </div>
 </section>
 	
+		<section class=" bd-section-18 bd-tagstyles" id="section18" data-section-title="Section">
+    <div class="bd-container-inner bd-margins clearfix">
+        <h1 class=" bd-textblock-95 bd-no-margins bd-content-element">
+    Affordable Digital Marketing Support from Smart Sprout<br>
+</h1>
+    </div>
+</section>
+	
 		<section class=" bd-section-12 hidden-md hidden-sm hidden-xs hidden-lg bd-tagstyles" id="section29" data-section-title="Section">
     <div class="bd-container-inner bd-margins clearfix">
         <div class=" bd-customhtml-11 bd-tagstyles">
@@ -480,11 +494,7 @@ p {
     <div class="bd-container-inner bd-margins clearfix">
         <div class=" bd-layoutbox-15 bd-no-margins clearfix">
     <div class="bd-container-inner">
-        <h1 class=" bd-textblock-95 bd-no-margins bd-content-element">
-    Affordable Digital Marketing Support from Smart Sprout<br>
-</h1>
-	
-		<h2 class=" bd-textblock-93 bd-content-element">
+        <h2 class=" bd-textblock-93 bd-content-element">
     Why is Smart Sprout cheaper than other digital marketing agencies?
 </h2>
 	
