--- a/testimonials.html
+++ b/testimonials.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1737"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1747"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1737" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1737"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1747" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1747"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1737">
-<script src="./assets/js/layout.ie.js?1.0.1737"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1747">
+<script src="./assets/js/layout.ie.js?1.0.1747"></script>
 <![endif]-->
-<link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
+<link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic|Archivo+Black:regular&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1737"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1747"></script>
 	
     <title>Digital Marketing Testimonials | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1737">
-	<script src="./assets/js/script.js?1.0.1737"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1747">
+	<script src="./assets/js/script.js?1.0.1747"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
